--- a/request.html
+++ b/request.html
@@ -61,7 +61,7 @@
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
         <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
             <div class="pl-4 flex items-center">
-                <a class="toggleColour text-white no-underline hover:no-underline font-medium text-2xl lg:text-4xl" href="#">
+                <a class="toggleColour text-white no-underline hover:no-underline font-medium text-2xl lg:text-4xl" href="index.html">
                     <!--Icon from: http://www.potlabicons.com/ -->
                     <svg class="w-14 h-14" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
@@ -79,119 +79,85 @@
             <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
                 <ul class="list-reset lg:flex justify-end flex-1 items-center">
                     <li class="mr-3">
-                        <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">About</a>
+                        <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="index.html">About</a>
                     </li>
                 </ul>
                 <a id="navAction" href="request.html" class="cursor-pointer mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                  Request an invite
+                    Request an invite
                 </a>
             </div>
         </div>
         <hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
     </nav>
-    <!--Hero-->
-    <div class="pt-24 mt-24">
-        <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
-            <!--Left Col-->
-            <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-                <p class="uppercase tracking-loose w-full">Welcome to UAE HUB Community</p>
-                <h1 class="my-4 text-5xl font-bold leading-tight">
-                    A private community for UAE Startups, Investors and Talents
-                </h1>
-                <p class="leading-normal text-xl mb-8">
-                    Invite-only, UAE and MENA startups network togther in one place.
-                </p>
-                <a href="request.html" class="cursor-pointer z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                  Request an invite
-                </a>
-            </div>
-            <!--Right Col-->
-            <div class="w-full md:w-3/5 py-6 text-center">
-                <img class="w-full md:w-4/5 z-50" src="group.svg" />
-            </div>
-        </div>
-    </div>
 
-    <div class="relative -mt-12 lg:-mt-24">
-        <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <g transform="translate(-2.000000, 44.000000)" fill="#FFFFFF" fill-rule="nonzero">
-            <path d="M0,0 C90.7283404,0.927527913 147.912752,27.187927 291.910178,59.9119003 C387.908462,81.7278826 543.605069,89.334785 759,82.7326078 C469.336065,156.254352 216.336065,153.6679 0,74.9732496" opacity="0.100000001"></path>
-            <path
-              d="M100,104.708498 C277.413333,72.2345949 426.147877,52.5246657 546.203633,45.5787101 C666.259389,38.6327546 810.524845,41.7979068 979,55.0741668 C931.069965,56.122511 810.303266,74.8455141 616.699903,111.243176 C423.096539,147.640838 250.863238,145.462612 100,104.708498 Z"
-              opacity="0.100000001"
-            ></path>
-            <path d="M1046,51.6521276 C1130.83045,29.328812 1279.08318,17.607883 1439,40.1656806 L1439,120 C1271.17211,77.9435312 1140.17211,55.1609071 1046,51.6521276 Z" id="Path-4" opacity="0.200000003"></path>
-          </g>
-          <g transform="translate(-4.000000, 76.000000)" fill="#FFFFFF" fill-rule="nonzero">
-            <path
-              d="M0.457,34.035 C57.086,53.198 98.208,65.809 123.822,71.865 C181.454,85.495 234.295,90.29 272.033,93.459 C311.355,96.759 396.635,95.801 461.025,91.663 C486.76,90.01 518.727,86.372 556.926,80.752 C595.747,74.596 622.372,70.008 636.799,66.991 C663.913,61.324 712.501,49.503 727.605,46.128 C780.47,34.317 818.839,22.532 856.324,15.904 C922.689,4.169 955.676,2.522 1011.185,0.432 C1060.705,1.477 1097.39,3.129 1121.236,5.387 C1161.703,9.219 1208.621,17.821 1235.4,22.304 C1285.855,30.748 1354.351,47.432 1440.886,72.354 L1441.191,104.352 L1.121,104.031 L0.457,34.035 Z"
-            ></path>
-          </g>
-        </g>
-      </svg>
-    </div>
-    <section class="bg-white border-b py-8">
-        <div class="container max-w-5xl mx-auto m-8">
-            <h1 class="w-full my-2 text-5xl font-medium leading-tight text-center text-gray-800 mb-4">
-                What's UAE Hub Community?
-            </h1>
-            <p class="text-gray-600 mb-8 text-center">
-                A private slack community tailored to the needs of growth startups. It is for serious business owners, investors and talents who want meet in one place, get to know each other, share common ideas, thoughts and find solutions which help their professions.
+    <section class="bg-white py-8 mt-28">
+        <div class="container max-w-2xl mx-auto m-8">
+
+            <p class="text-gray-600 mb-8 text-center text-2xl">
+                Request an invite to
             </p>
+            <h1 class="w-full my-2 text-5xl font-medium leading-tight text-center text-gray-800 mb-4">
+                UAE Startups Private Community
+            </h1>
 
             <div class="w-full mb-10">
                 <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
             </div>
 
-            <div class="flex flex-wrap mb-10">
-                <div class="w-full sm:w-1/2 p-6">
-                    <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                        Startups
-                    </h3>
-                    <p class="text-gray-600 mb-8">
-                        Grow with the best talent and hire the talents first hand. Show off products and services to wide range of prospects, and connect to leading investors.
-                        <br />
-                    </p>
-                </div>
-                <div class="w-full sm:w-1/2 p-6">
-                    <img class="w-full w-5/6 sm:h-64 mx-auto z-50" src="product_tour.svg" />
-                </div>
+            <div class="text-gray-500 mb-10">
+                <p class="text-center text-gray-700 text-2xl font-light mb-10">Professional Startup community of and for UAE companies and startups</p>
+                <ul>
+                    <li class="mt-2">✅ Learn from over 18,000 skilled designers & researchers</li>
+                    <li class="mt-2">✅ Full access to the #jobs to channel to find your next opportunity or find your next hire</li>
+                    <li class="mt-2">✅ Get live feedback and suggestions in our 24/7 community</li>
+                    <li class="mt-2">✅ Discover the latest tools and trends</li>
+                    <li class="mt-2">✅ Meet & chat with designers in all industries from around the world</li>
+                    <li class="mt-2">Note: Everyone is manually vetted to keep the highest quality within the community so the wait time could be up to 12 weeks.</li>
+                </ul>
             </div>
 
-            <div class="flex flex-wrap flex-col-reverse sm:flex-row mb-10">
-                <div class="w-full sm:w-1/2 p-6">
-                    <img class="w-full w-5/6 sm:h-64 mx-auto z-50" src="Investors.svg" />
-                </div>
-                <div class="w-full sm:w-1/2 p-6 mt-6">
-                    <div class="align-middle">
-                        <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                            Investors
-                        </h3>
-                        <p class="text-gray-600 mb-8">
-                            Let the brightest and best startups find you!
-                            <br />
-                        </p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="flex flex-wrap mb-10">
-                <div class="w-full sm:w-1/2 p-6">
-                    <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                        Talents
+
+            <div class="flex flex-wrap mb-10 bg-white rounded-t rounded-b-none overflow-hidden shadow text-center">
+                <div class="w-full p-6">
+                    <h3 class="text-xl text-gray-500 font-bold leading-none mb-3">
+                        Get lifetime access
                     </h3>
-                    <p class="text-gray-600 mb-8">
-                        Show off your profile and skills direct to HRs and be first to check jobs posts.
-                        <br />
+                    <span class="text-5xl text-center font-bold text-gray-700">
+                      AED 249
+                    </span>
+                    <p class="text-gray-500 mb-8">
+                        Unlimited access, messages, and channels to boost your career and find next investment, and highlight your startup
                     </p>
                 </div>
-                <div class="w-full sm:w-1/2 p-6">
-                    <img class="w-full w-5/6 sm:h-64 mx-auto z-50" src="talents.svg" />
-                </div>
+                <!-- typeform-widget -->
+                <div class="typeform-widget" data-url="https://form.typeform.com/to/CFDvdFhZ?typeform-medium=embed-snippet" style="width: 100%; height: 400px;"></div>
+                <script>
+                    (function() {
+                        var qs, js, q, s, d = document,
+                            gi = d.getElementById,
+                            ce = d.createElement,
+                            gt = d.getElementsByTagName,
+                            id = "typef_orm",
+                            b = "https://embed.typeform.com/";
+                        if (!gi.call(d, id)) {
+                            js = ce.call(d, "script");
+                            js.id = id;
+                            js.src = b + "embed.js";
+                            q = gt.call(d, "script")[0];
+                            q.parentNode.insertBefore(js, q)
+                        }
+                    })()
+                </script>
+                <!-- END typeform-widget -->
             </div>
+
+
+
         </div>
     </section>
+
+
 
 
     <!-- Change the colour #f8fafc to match the previous section colour -->
@@ -218,17 +184,9 @@
     </svg>
     <section class="container mx-auto text-center py-6 mb-12">
         <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
-            I'm ready to join
+            Thank You!
         </h1>
-        <div class="w-full mb-4">
-            <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
-        </div>
-        <h3 class="my-4 text-xl leading-tight text-white-400 mb-8">
-            UAE Startups' best kept secret
-        </h3>
-        <a href="request.html" class="cursor-pointer mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-        Send me an invitation
-        </a>
+
     </section>
     <!--Footer-->
     <footer class="bg-white">
