Change request page and update index

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     A private community for UAE Startups, Investors and Talents
                 </h1>
                 <p class="leading-normal text-xl mb-8">
-                    Invite-only, UAE and MENA startups network togther in one place.
+                    Invite-only, UAE and MENA startups network get togther in one place.
                 </p>
                 <a href="request.html" class="cursor-pointer z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                   Request an invite
@@ -169,7 +169,7 @@
                             Investors
                         </h3>
                         <p class="text-gray-600 mb-8">
-                            Let the brightest and best startups find you!
+                            Let the brightest and best startups find you! Show off your key assets, your previous investments and focus areas.
                             <br />
                         </p>
                     </div>
