--- a/request.html
+++ b/request.html
@@ -105,28 +105,28 @@
             </div>
 
             <div class="text-gray-500 mb-10">
-                <p class="text-center text-gray-700 text-2xl font-light mb-10">Professional Startup community of and for UAE companies and startups</p>
+
                 <ul>
-                    <li class="mt-2">✅ Learn from over 18,000 skilled designers & researchers</li>
+                    <li class="mt-2">✅ Learn from skilled makers, business owners, investors & recruiters</li>
                     <li class="mt-2">✅ Full access to the #jobs to channel to find your next opportunity or find your next hire</li>
                     <li class="mt-2">✅ Get live feedback and suggestions in our 24/7 community</li>
-                    <li class="mt-2">✅ Discover the latest tools and trends</li>
-                    <li class="mt-2">✅ Meet & chat with designers in all industries from around the world</li>
+                    <li class="mt-2">✅ Discover the latest local business news, tools and trends</li>
+                    <li class="mt-2">✅ Meet & chat with members in all industries close to you</li>
                     <li class="mt-2">Note: Everyone is manually vetted to keep the highest quality within the community so the wait time could be up to 12 weeks.</li>
                 </ul>
             </div>
 
 
 
-            <div class="flex flex-wrap mb-10 bg-white rounded-t rounded-b-none overflow-hidden shadow text-center">
+            <div class="flex flex-wrap mb-10 bg-white rounded-md rounded-b-none overflow-hidden border-solid border-2 border-light-blue-500 text-center">
                 <div class="w-full p-6">
-                    <h3 class="text-xl text-gray-500 font-bold leading-none mb-3">
+                    <h3 class="text-xl text-gray-500 font-bold leading-none mb-6">
                         Get lifetime access
                     </h3>
                     <span class="text-5xl text-center font-bold text-gray-700">
                       AED 249
                     </span>
-                    <p class="text-gray-500 mb-8">
+                    <p class="text-gray-500 mb-4 mt-6">
                         Unlimited access, messages, and channels to boost your career and find next investment, and highlight your startup
                     </p>
                 </div>
