Alter more content and design touches

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-        Welcome to UAE HUB - A private community for UAE Startups, Investors and Talentsfiles.
+        Welcome to UAE HUB - A private community for UAE Startups, Investors and Talents.
     </title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -54,7 +54,7 @@
 </head>
 
 <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
-    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="https://raw.githubusercontent.com/AhmedNadar/ahmed-nadar/main/app/assets/images/ahmed-nadar.png?token=AABKSGUSA6MUPYLPBKEYW2TAEGTKC">
+    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="ahmed-nadar.png">
         <p>by Ahmed Nadar</p>
     </a>
     <!--Nav-->
@@ -79,7 +79,7 @@
             <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
                 <ul class="list-reset lg:flex justify-end flex-1 items-center">
                     <li class="mr-3">
-                        <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">About</a>
+                        <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="index.html">About</a>
                     </li>
                 </ul>
                 <a id="navAction" href="request.html" class="cursor-pointer mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -136,8 +136,8 @@
             <h1 class="w-full my-2 text-5xl font-medium leading-tight text-center text-gray-800 mb-4">
                 What's UAE Hub Community?
             </h1>
-            <p class="text-gray-600 mb-8 text-center">
-                A private slack community tailored to the needs of growth startups. It is for serious business owners, investors and talents who want meet in one place, get to know each other, share common ideas, thoughts and find solutions which help their professions.
+            <p class="text-gray-600 mb-8 text-center text-lg">
+                A private slack community tailored to the needs of growth startups in UAE. It is for serious business owners, investors and talents who want meet in one place, get to know each other, share common ideas, thoughts and find solutions which help their success.
             </p>
 
             <div class="w-full mb-10">
@@ -149,7 +149,7 @@
                     <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
                         Startups
                     </h3>
-                    <p class="text-gray-600 mb-8">
+                    <p class="text-gray-600 mb-8 text-lg">
                         Grow with the best talent and hire the talents first hand. Show off products and services to wide range of prospects, and connect to leading investors.
                         <br />
                     </p>
@@ -168,7 +168,7 @@
                         <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
                             Investors
                         </h3>
-                        <p class="text-gray-600 mb-8">
+                        <p class="text-gray-600 mb-8 text-lg">
                             Let the brightest and best startups find you! Show off your key assets, your previous investments and focus areas.
                             <br />
                         </p>
@@ -181,7 +181,7 @@
                     <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
                         Talents
                     </h3>
-                    <p class="text-gray-600 mb-8">
+                    <p class="text-gray-600 mb-8 text-lg">
                         Show off your profile and skills direct to HRs and be first to check jobs posts.
                         <br />
                     </p>
