--- a/request.html
+++ b/request.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-        Welcome to UAE HUB - A private community for UAE Startups, Investors and Talentsfiles.
+        Welcome to UAE HUB - A private community for UAE Startups, Investors and Talents.
     </title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -54,7 +54,7 @@
 </head>
 
 <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
-    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="https://raw.githubusercontent.com/AhmedNadar/ahmed-nadar/main/app/assets/images/ahmed-nadar.png?token=AABKSGUSA6MUPYLPBKEYW2TAEGTKC">
+    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="ahmed-nadar.png">
         <p>by Ahmed Nadar</p>
     </a>
     <!--Nav-->
@@ -112,7 +112,7 @@
                     <li class="mt-2">✅ Get live feedback and suggestions in our 24/7 community</li>
                     <li class="mt-2">✅ Discover the latest local business news, tools and trends</li>
                     <li class="mt-2">✅ Meet & chat with members in all industries close to you</li>
-                    <li class="mt-2">Note: Everyone is manually vetted to keep the highest quality within the community so the wait time could be up to 12 weeks.</li>
+                    <li class="mt-2">Note: Everyone is manually vetted to keep the highest quality within the community so the wait time could be up to 2 weeks after payment.</li>
                 </ul>
             </div>
 
@@ -120,13 +120,13 @@
 
             <div class="flex flex-wrap mb-10 bg-white rounded-md rounded-b-none overflow-hidden border-solid border-2 border-light-blue-500 text-center">
                 <div class="w-full p-6">
-                    <h3 class="text-xl text-gray-500 font-bold leading-none mb-6">
+                    <h3 class="text-lg text-gray-500 font-bold leading-none mb-6">
                         Get lifetime access
                     </h3>
                     <span class="text-5xl text-center font-bold text-gray-700">
                       AED 249
                     </span>
-                    <p class="text-gray-500 mb-4 mt-6">
+                    <p class="text-gray-500 mb-4 mt-6 text-lg">
                         Unlimited access, messages, and channels to boost your career and find next investment, and highlight your startup
                     </p>
                 </div>
@@ -182,11 +182,19 @@
         </g>
       </g>
     </svg>
-    <section class="container mx-auto text-center py-6 mb-12">
-        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
-            Thank You!
-        </h1>
-
+    <section class="container mx-auto text-center py-6 mb-12 max-w-5xl mx-auto">
+        <div class="flex flex-wrap mb-10">
+            <div class="w-full sm:w-2/5 p-6 flex justify-end">
+                <img class="rounded-full flex items-center justify-center h-200 w-200 z-50 border-gray-200 border" src="ahmed-nadar.png" />
+            </div>
+            <div class="w-full sm:w-3/5 p-4">
+                <p class="w-full my-2 text-2xl font-bold leading-relaxed text-white text-left tracking-wide">
+                    Who is behind this?<br> <span class="font-medium">Hi, I’m <a class="underline text-indigo-200" href="http://twitter.com/ahmednadar">Ahmed Nadar</a>, the founder of UAE Hub.</span>
+                </p>
+                <p class="w-full my-2 text-lg font-medium leading-relaxed text-white text-left tracking-wide">I'm a designer and developer been working with wide-range of companies since 2010. I have consulted on development and deign for companies in Toronto, New York, Cairo, Doha and UAE.</p>
+                <p class="w-full my-2 font-medium text-gray-300 text-left tracking-wide">Questions? Email me: ahmednadar@gmail.com</p>
+            </div>
+        </div>
     </section>
     <!--Footer-->
     <footer class="bg-white">
