--- a/request.html
+++ b/request.html
@@ -52,7 +52,7 @@
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2GPGY27X4X"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ELW06PBYPJ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -61,7 +61,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'G-2GPGY27X4X');
+        gtag('config', 'G-ELW06PBYPJ');
     </script>
 
 </head>
