Update content and layout

--- a/request.html
+++ b/request.html
@@ -106,7 +106,7 @@
     <section class="bg-white py-8 mt-28">
         <div class="container max-w-2xl mx-auto m-8">
 
-            <p class="text-gray-600 mb-8 text-center text-2xl">
+            <p class="text-gray-500 mb-8 text-center text-2xl">
                 Request an invite to
             </p>
             <h1 class="w-full my-2 text-5xl font-medium leading-tight text-center text-gray-800 mb-4">
@@ -118,14 +118,28 @@
             </div>
 
             <div class="text-gray-500 mb-10">
+                <p class="text-lg text-gray-600 mb-8 w-full my-2 leading-relaxed text-left tracking-wide">
+                    We are a group of people that came together because we realized that in order to success in our businesses, investments and jobs we need to quit thinking about it, and actually work on and do something about it. We realized we can’t do this in isolation.
+                    We need help from other successful startups and individuals.
+                </p>
+                <p class="font-bold mb-8 text-gray-900 my-2 text-2xl">What you get</p>
 
+                <p class="text-lg text-gray-600 mb-4 w-full my-2 leading-relaxed text-left">
+                    Unlike other membership sites, you pay once and get lifetime access to:
+                    <ul>
+                        <li>Slack chat</li>
+                        <li>Forums - Coming after invitation period is over</li>
+                        <li>Member resources (videos, downloads)</li>
+                        <li>Unlimited access, messages, and channels to boost your career and find next investment, and highlight your startup</li>
+                    </ul>
+                </p>
                 <ul>
                     <li class="mt-2">✅ Learn from skilled makers, business owners, investors & recruiters</li>
                     <li class="mt-2">✅ Full access to the #jobs to channel to find your next opportunity or find your next hire</li>
                     <li class="mt-2">✅ Get live feedback and suggestions in our 24/7 community</li>
                     <li class="mt-2">✅ Discover the latest local business news, tools and trends</li>
                     <li class="mt-2">✅ Meet & chat with members in all industries close to you</li>
-                    <li class="mt-2">Note: Everyone is manually vetted to keep the highest quality within the community so the wait time could be up to 2 weeks after payment.</li>
+                    <li class="mt-2">Note: Everyone is manually vetted to keep the highest quality within the community so the wait time could be up to 3 days after payment.</li>
                 </ul>
             </div>
 
@@ -137,10 +151,11 @@
                         Get lifetime access
                     </h3>
                     <span class="text-5xl text-center font-bold text-gray-700">
-                      AED 249
+                      AED 329
                     </span>
                     <p class="text-gray-500 mb-4 mt-6 text-lg">
-                        Unlimited access, messages, and channels to boost your career and find next investment, and highlight your startup
+                        Currently is an early stage we before we accept our member’s to join on February 14 ( Valentines' Day 😍, what a better way to celebrate 🤝 ).
+                        <br><br> if you'd like us to send you a reminder when we are ready, just start below...
                     </p>
                 </div>
                 <!-- typeform-widget -->
@@ -204,7 +219,7 @@
                 <p class="w-full my-2 text-2xl font-bold leading-relaxed text-white text-left tracking-wide">
                     Who is behind this?<br> <span class="font-medium">Hi, I’m <a class="underline text-indigo-200" href="http://twitter.com/ahmednadar">Ahmed Nadar</a>, the founder of UAE Hub.</span>
                 </p>
-                <p class="w-full my-2 text-lg font-medium leading-relaxed text-white text-left tracking-wide">I'm a designer and developer been working with wide-range of companies since 2010. I have consulted on development and deign for companies in Toronto, New York, Cairo, Doha and UAE.</p>
+                <p class="w-full my-2 text-lg font-medium leading-relaxed text-white text-left tracking-wide">I'm a designer and developer been working with wide-range of companies since 2010. I have consulted on development, deign and growth for companies in Toronto, New York, Cairo, Doha and UAE.</p>
                 <p class="w-full my-2 font-medium text-gray-300 text-left tracking-wide">Questions? Email me: ahmednadar@gmail.com</p>
             </div>
         </div>
