--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             padding: 6px;
             border-top: 1px solid #efefef;
             border-left: 1px solid #efefef;
-            background: #fff;
+            background: #f8fafc;
             color: #6f6f6f;
             text-decoration: none;
         }
@@ -65,61 +65,61 @@
     </script>
 </head>
 
-<body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
+<body class="leading-normal tracking-normal gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="ahmed-nadar.png">
         <p>by Ahmed Nadar</p>
     </a>
     <!--Nav-->
-    <nav id="header" class="fixed w-full z-30 top-0 text-white">
-        <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
-            <div class="pl-4 flex items-center">
-                <a class="toggleColour text-white no-underline hover:no-underline font-medium text-2xl lg:text-4xl" href="#">
+    <nav id="header" class="fixed top-0 z-30 w-full text-white">
+        <div class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0">
+            <div class="flex items-center pl-4">
+                <a class="text-2xl font-medium text-white no-underline toggleColour hover:no-underline lg:text-4xl" href="#">
                     <!--Icon from: http://www.potlabicons.com/ -->
                     <svg class="w-14 h-14" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
                     </svg> UAE Hub
                 </a>
             </div>
-            <div class="block lg:hidden pr-4">
-                <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <div class="block pr-4 lg:hidden">
+                <button id="nav-toggle" class="flex items-center p-1 text-pink-800 transition duration-300 ease-in-out transform hover:text-gray-900 focus:outline-none focus:shadow-outline hover:scale-105">
+            <svg class="w-6 h-6 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <title>Menu</title>
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
             </svg>
           </button>
             </div>
-            <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
-                <ul class="list-reset lg:flex justify-end flex-1 items-center">
+            <div class="z-20 flex-grow hidden w-full p-4 mt-2 text-black bg-white lg:flex lg:items-center lg:w-auto lg:mt-0 lg:bg-transparent lg:p-0" id="nav-content">
+                <ul class="items-center justify-end flex-1 list-reset lg:flex">
                     <li class="mr-3">
-                        <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="index.html">About</a>
+                        <a class="inline-block px-4 py-2 font-bold text-black no-underline" href="index.html">About</a>
                     </li>
                 </ul>
-                <a id="navAction" href="request.html" class="cursor-pointer mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                <a id="navAction" href="request.html" class="px-8 py-4 mx-auto mt-4 font-bold text-gray-800 transition duration-300 ease-in-out transform bg-white rounded-full shadow opacity-75 cursor-pointer lg:mx-0 hover:underline lg:mt-0 focus:outline-none focus:shadow-outline hover:scale-105">
                   Request an invite
                 </a>
             </div>
         </div>
-        <hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
+        <hr class="py-0 my-0 border-b border-gray-100 opacity-25" />
     </nav>
     <!--Hero-->
     <div class="pt-24 mt-24">
-        <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
+        <div class="container flex flex-col flex-wrap items-center px-3 mx-auto md:flex-row">
             <!--Left Col-->
-            <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-                <p class="uppercase tracking-loose w-full">Welcome to UAE HUB Community</p>
+            <div class="flex flex-col items-start justify-center w-full text-center md:w-2/5 md:text-left">
+                <p class="w-full uppercase tracking-loose">Welcome to UAE HUB Community</p>
                 <h1 class="my-4 text-5xl font-bold leading-tight">
                     A private community for UAE Startups, Investors and Talents
                 </h1>
-                <p class="leading-normal text-xl mb-8">
+                <p class="mb-8 text-xl leading-normal">
                     Invite-only, UAE and MENA startups network get togther in one place.
                 </p>
-                <a href="request.html" class="cursor-pointer z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                <a href="request.html" class="z-10 px-8 py-4 mx-auto my-6 font-bold text-gray-800 transition duration-300 ease-in-out transform bg-white rounded-full shadow-lg cursor-pointer lg:mx-0 hover:underline focus:outline-none focus:shadow-outline hover:scale-105">
                   Request an invite
                 </a>
             </div>
             <!--Right Col-->
-            <div class="w-full md:w-3/5 py-6 text-center">
-                <img class="w-full md:w-4/5 z-50" src="group.svg" />
+            <div class="w-full py-6 text-center md:w-3/5">
+                <img class="z-50 w-full md:w-4/5" src="group.svg" />
             </div>
         </div>
     </div>
@@ -143,44 +143,53 @@
         </g>
       </svg>
     </div>
-    <section class="bg-white border-b py-8">
-        <div class="container max-w-5xl mx-auto m-8">
-            <h1 class="w-full my-2 text-5xl font-medium leading-tight text-center text-gray-800 mb-4">
+    <section class="py-8 bg-white">
+        <div class="container max-w-5xl m-8 mx-auto">
+            <h1 class="w-full my-2 mb-4 text-5xl font-medium leading-tight text-center text-gray-800">
                 What's UAE Hub Community?
             </h1>
-            <p class="text-gray-600 mb-8 text-center text-lg">
-                A private slack community tailored to the needs of growth startups in UAE. It is for serious business owners, investors and talents who want meet in one place, get to know each other, share common ideas, thoughts and find solutions which help their success.
-            </p>
+            <div class="mb-8 text-lg text-gray-700">
+
+                <p class="mb-4 "><span class="text-xl font-semibold">First</span> , building a startup community is hard, intentional work. Once created, startup communities help spur entrepreneurs to build new businesses, connect investors to new opportunities, bring
+                    members into the community to support startups and celebrate the success as entrepreneurs excel.</p>
+
+                <p class="flex mb-4"> Entrepreneurship is a special kind of sport and startup communities provide the network to make your city innovative, vibrant, and a hot bed for employment. Startup activities are a great start, but a real community will define your long-term
+                    prosperity.
+                </p>
+
+                <p class="flex mb-4"> A private slack community tailored to the needs of growth startups in UAE. It is for serious business owners, investors and talents who want meet in one place, get to know each other, share common ideas, thoughts and find solutions which
+                    help their success.</p>
+            </div>
 
             <div class="w-full mb-10">
-                <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+                <div class="w-64 h-1 py-0 mx-auto my-0 rounded-t opacity-25 gradient"></div>
             </div>
 
             <div class="flex flex-wrap mb-10">
-                <div class="w-full sm:w-1/2 p-6">
-                    <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+                <div class="w-full p-6 sm:w-1/2">
+                    <h3 class="mb-3 text-3xl font-bold leading-none text-gray-800">
                         Startups
                     </h3>
-                    <p class="text-gray-600 mb-8 text-lg">
+                    <p class="mb-8 text-lg text-gray-600">
                         Grow with the best talent and hire the talents first hand. Show off products and services to wide range of prospects, and connect to leading investors.
                         <br />
                     </p>
                 </div>
-                <div class="w-full sm:w-1/2 p-6">
-                    <img class="w-full w-5/6 sm:h-64 mx-auto z-50" src="product_tour.svg" />
+                <div class="w-full p-6 sm:w-1/2">
+                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="product_tour.svg" />
                 </div>
             </div>
 
-            <div class="flex flex-wrap flex-col-reverse sm:flex-row mb-10">
-                <div class="w-full sm:w-1/2 p-6">
-                    <img class="w-full w-5/6 sm:h-64 mx-auto z-50" src="Investors.svg" />
+            <div class="flex flex-col-reverse flex-wrap mb-10 sm:flex-row">
+                <div class="w-full p-6 sm:w-1/2">
+                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="Investors.svg" />
                 </div>
-                <div class="w-full sm:w-1/2 p-6 mt-6">
+                <div class="w-full p-6 mt-6 sm:w-1/2">
                     <div class="align-middle">
-                        <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+                        <h3 class="mb-3 text-3xl font-bold leading-none text-gray-800">
                             Investors
                         </h3>
-                        <p class="text-gray-600 mb-8 text-lg">
+                        <p class="mb-8 text-lg text-gray-600">
                             Let the brightest and best startups find you! Show off your key assets, your previous investments and focus areas.
                             <br />
                         </p>
@@ -189,18 +198,32 @@
             </div>
 
             <div class="flex flex-wrap mb-10">
-                <div class="w-full sm:w-1/2 p-6">
-                    <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+                <div class="w-full p-6 sm:w-1/2">
+                    <h3 class="mb-3 text-3xl font-bold leading-none text-gray-800">
                         Talents
                     </h3>
-                    <p class="text-gray-600 mb-8 text-lg">
+                    <p class="mb-8 text-lg text-gray-600">
                         Show off your profile and skills direct to HRs and be first to check jobs posts.
                         <br />
                     </p>
                 </div>
-                <div class="w-full sm:w-1/2 p-6">
-                    <img class="w-full w-5/6 sm:h-64 mx-auto z-50" src="talents.svg" />
+                <div class="w-full p-6 sm:w-1/2">
+                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="talents.svg" />
                 </div>
+            </div>
+
+            <div class="w-full mb-10">
+                <div class="w-64 h-1 py-0 mx-auto my-0 rounded-t opacity-25 gradient"></div>
+            </div>
+            <div class="mb-10">
+                <h3 class="mb-3 text-2xl font-semibold leading-none text-gray-800">
+                    WHO WE ARE
+                </h3>
+                <p class="w-full my-2 mb-6 text-lg leading-relaxed text-gray-700">
+                    We are a group of people, startups, founders, innovators, and creators that came together because we realized that in order to success in our businesses, investments and jobs we need to quit thinking about it, and actually work on it and do something.
+                    We realized we can’t do this in isolation. We need help from other successful startups and individuals. We bring like-minded yet diverse individuals together to connect, learn, teach, help, build, and belong. We do this through our
+                    local events, disscussion, partnerships, and online media + content.
+                </p>
             </div>
         </div>
     </section>
@@ -228,28 +251,28 @@
         </g>
       </g>
     </svg>
-    <section class="container mx-auto text-center py-6 mb-12">
+    <section class="container py-6 mx-auto mb-12 text-center">
         <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
             I'm ready to join
         </h1>
         <div class="w-full mb-4">
-            <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
+            <div class="w-1/6 h-1 py-0 mx-auto my-0 bg-white rounded-t opacity-25"></div>
         </div>
-        <h3 class="my-4 text-xl leading-tight text-white-400 mb-8">
+        <h3 class="my-4 mb-8 text-xl leading-tight text-white-400">
             UAE Startups' best kept secret
         </h3>
-        <a href="request.html" class="cursor-pointer mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+        <a href="request.html" class="px-8 py-4 mx-auto my-6 font-bold text-gray-800 transition duration-300 ease-in-out transform bg-white rounded-full shadow-lg cursor-pointer lg:mx-0 hover:underline focus:outline-none focus:shadow-outline hover:scale-105">
         Send me an invitation
         </a>
     </section>
     <!--Footer-->
     <footer class="bg-white">
-        <div class="container mx-auto px-8 text-center">
-            <div class="w-full flex flex-col md:flex-row py-6">
+        <div class="container px-8 mx-auto text-center">
+            <div class="flex flex-col w-full py-6 md:flex-row">
                 <div class="flex-1 mb-6 text-black">
-                    <a class="text-pink-600 no-underline hover:no-underline font-medium text-xl lg:text-2xl text-center mx-auto" href="index.html">
+                    <a class="mx-auto text-xl font-medium text-center text-pink-600 no-underline hover:no-underline lg:text-2xl" href="index.html">
                         <!--Icon from: http://www.potlabicons.com/ -->
-                        <svg class="w-14 h-14 text-center mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <svg class="mx-auto text-center w-14 h-14" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
                         </svg> UAE Hub Community
                     </a>
