update media src

--- a/request.html
+++ b/request.html
@@ -127,9 +127,9 @@
                 <p class="w-full my-2 mt-4 mb-4 text-xl font-semibold leading-relaxed tracking-wide text-gray-900">Our community unlike other membership sites, you pay once and get lifetime access to:</p>
 
                 <p class="text-lg font-semibold">
-                    <img src="slack-logo-icon.png" class="inline-block w-6 h-6 mr-1 -mt-1" alt="slack"> Slack chat,
-                    <img src="forum-icon.png" class="inline-block w-6 h-6 ml-1 mr-1 -mt-1" alt="slack"> Forums and
-                    <img src="resources-icon.png" class="inline-block w-6 h-6 ml-1 mr-1 -mt-1" alt="slack"> Member resources.
+                    <img src="media/slack-logo-icon.png" class="inline-block w-6 h-6 mr-1 -mt-1" alt="slack"> Slack chat,
+                    <img src="media/forum-icon.png" class="inline-block w-6 h-6 ml-1 mr-1 -mt-1" alt="slack"> Forums and
+                    <img src="media/resources-icon.png" class="inline-block w-6 h-6 ml-1 mr-1 -mt-1" alt="slack"> Member resources.
                     <span class="font-normal">These tools are extremely valuable. It would help you grow your career and business.</span>
                 </p>
                 <ul class="mt-4 ml-4">
@@ -207,7 +207,7 @@
     <section class="container max-w-5xl py-6 mx-auto mb-12 text-center">
         <div class="flex flex-wrap mb-10">
             <div class="flex justify-end w-full p-6 sm:w-2/5">
-                <img class="z-50 flex items-center justify-center w-auto border border-gray-200 rounded-full h-60" src="ahmed-nadar.png" />
+                <img class="z-50 flex items-center justify-center w-auto border border-gray-200 rounded-full h-60" src="media/ahmed-nadar.png" />
             </div>
             <div class="w-full p-4 sm:w-3/5">
                 <p class="w-full my-2 text-2xl font-bold leading-relaxed tracking-wide text-left text-white">
