--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 
 <body class="leading-normal tracking-normal gradient" style="font-family: 'Source Sans Pro', sans-serif;">
-    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="ahmed-nadar.png">
+    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="media/ahmed-nadar.png">
         <p>by Ahmed Nadar</p>
     </a>
     <!--Nav-->
@@ -119,7 +119,7 @@
             </div>
             <!--Right Col-->
             <div class="w-full py-6 text-center md:w-3/5">
-                <img class="z-50 w-full md:w-4/5" src="group.svg" />
+                <img class="z-50 w-full md:w-4/5" src="media/group.svg" />
             </div>
         </div>
     </div>
@@ -176,13 +176,13 @@
                     </p>
                 </div>
                 <div class="w-full p-6 sm:w-1/2">
-                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="product_tour.svg" />
+                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="media/product_tour.svg" />
                 </div>
             </div>
 
             <div class="flex flex-col-reverse flex-wrap mb-10 sm:flex-row">
                 <div class="w-full p-6 sm:w-1/2">
-                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="Investors.svg" />
+                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="media/investors.svg" />
                 </div>
                 <div class="w-full p-6 mt-6 sm:w-1/2">
                     <div class="align-middle">
@@ -208,7 +208,7 @@
                     </p>
                 </div>
                 <div class="w-full p-6 sm:w-1/2">
-                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="talents.svg" />
+                    <img class="z-50 w-5/6 w-full mx-auto sm:h-64" src="media/talents.svg" />
                 </div>
             </div>
 
