--- a/request.html
+++ b/request.html
@@ -118,10 +118,10 @@
             </div>
 
             <div class="mb-10">
-                <ul class="mt-4 ml-4 text-lg leading-relaxed">
-                    <li class="mt-1">📜 We believe in making friends, not contacts.</li>
-                    <li class="mt-1">📜 We believe in giving, not taking.</li>
-                    <li class="mt-1">📜 We believe in helping others before helping yourself.</li>
+                <ul class="mt-4 text-lg leading-relaxed">
+                    <li>📜 We believe in making friends, not contacts.</li>
+                    <li>📜 We believe in giving, not taking.</li>
+                    <li>📜 We believe in helping others before helping yourself.</li>
                 </ul>
 
                 <p class="w-full my-2 mt-4 mb-4 text-xl font-semibold leading-relaxed tracking-wide text-gray-900">Our community unlike other membership sites, you pay once and get lifetime access to:</p>
@@ -129,8 +129,8 @@
                 <p class="text-lg font-semibold">
                     <img src="media/slack-logo-icon.png" class="inline-block w-6 h-6 mr-1 -mt-1" alt="slack"> Slack chat,
                     <img src="media/forum-icon.png" class="inline-block w-6 h-6 ml-1 mr-1 -mt-1" alt="slack"> Forums and
-                    <img src="media/resources-icon.png" class="inline-block w-6 h-6 ml-1 mr-1 -mt-1" alt="slack"> Member resources.
-                    <span class="font-normal">These tools are extremely valuable. It would help you grow your career and business.</span>
+                    <img src="media/resources-icon.png" class="inline-block w-6 h-6 ml-1 mr-1 -mt-1" alt="slack"> Member resources,
+                    <span class="font-normal">these tools are extremely valuable. It would help you grow your career and business.</span>
                 </p>
                 <ul class="mt-4 ml-4">
                     <li class="mt-2">✅ Learn from skilled makers, business owners, investors & recruiters</li>
@@ -153,9 +153,9 @@
                     <span class="text-5xl font-bold text-center text-gray-700">
 											AED 349
 										</span>
-                    <p class="mt-6 mb-4 text-lg text-gray-500">
-                        Currently is an early stage we acceptog before we accept our member’s to join on February 20 🤝
-                        <br>if you'd like us to send you a reminder when we are ready, just start below...
+                    <p class="mt-6 mb-4 text-lg leading-relaxed">
+                        We are in an acceptance early stage before we open it for member’s to join on Valentines' Day 😍 February 14 -what a better way to celebrate 🎉🥳
+                        <br> If you'd like us to send you a reminder when we are ready, tell us below...
                     </p>
                 </div>
                 <!-- typeform-widget -->
