--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <hr class="py-0 my-0 border-b border-gray-100 opacity-25" />
     </nav>
     <!--Hero-->
-    <div class="pt-24 mt-24">
-        <div class="container flex flex-col flex-wrap items-center px-3 mx-auto md:flex-row">
+    <div class="pt-24 mt-24 ">
+        <div class="container flex flex-col flex-wrap items-center px-3 mx-auto text-white md:flex-row">
             <!--Left Col-->
             <div class="flex flex-col items-start justify-center w-full text-center md:w-2/5 md:text-left">
                 <p class="w-full uppercase tracking-loose">Welcome to UAE HUB Community</p>
@@ -258,7 +258,7 @@
         <div class="w-full mb-4">
             <div class="w-1/6 h-1 py-0 mx-auto my-0 bg-white rounded-t opacity-25"></div>
         </div>
-        <h3 class="my-4 mb-8 text-xl leading-tight text-white-400">
+        <h3 class="my-4 mb-8 text-xl leading-tight text-white">
             UAE Startups' best kept secret
         </h3>
         <a href="request.html" class="px-8 py-4 mx-auto my-6 font-bold text-gray-800 transition duration-300 ease-in-out transform bg-white rounded-full shadow-lg cursor-pointer lg:mx-0 hover:underline focus:outline-none focus:shadow-outline hover:scale-105">
