--- a/request.html
+++ b/request.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
     <!--Replace with your tailwind.css once created-->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
     <style>
         .gradient {
@@ -67,7 +68,7 @@
 </head>
 
 <body class="leading-normal tracking-normal text-gray-700 gradient" style="font-family: 'Source Sans Pro', sans-serif;">
-    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="ahmed-nadar.png">
+    <a target="_blank" rel="noopener" class="made-by" href="http://www.ahmednadar.com/"><img src="media/ahmed-nadar.png">
         <p>by Ahmed Nadar</p>
     </a>
     <!--Nav-->
@@ -124,7 +125,7 @@
                     <li>📜 We believe in helping others before helping yourself.</li>
                 </ul>
 
-                <p class="w-full my-2 mt-4 mb-4 text-xl font-semibold leading-relaxed tracking-wide text-gray-900">Our community unlike other membership sites, you pay once and get lifetime access to:</p>
+                <p class="w-full my-2 mt-10 mb-4 text-xl font-semibold leading-relaxed tracking-wide text-gray-900">Our community unlike other membership sites, you pay once and get lifetime access to:</p>
 
                 <p class="text-lg font-semibold">
                     <img src="media/slack-logo-icon.png" class="inline-block w-6 h-6 mr-1 -mt-1" alt="slack"> Slack chat,
@@ -150,13 +151,9 @@
                     <h3 class="mb-6 text-lg font-bold leading-none text-gray-500">
                         Get lifetime access
                     </h3>
-                    <span class="text-5xl font-bold text-center text-gray-700">
-											AED 349
-										</span>
-                    <p class="mt-6 mb-4 text-lg leading-relaxed">
-                        We are in an acceptance early stage before we open it for member’s to join on Valentines' Day 😍 February 14 -what a better way to celebrate 🎉🥳
-                        <br> If you'd like us to send you a reminder when we are ready, tell us below...
-                    </p>
+                    <p class="text-5xl font-bold text-center text-gray-700">AED 349</p>
+                    <p class="mt-6 mb-4 text-lg leading-relaxed">We are in an acceptance early stage before we open it for member’s to join on <span class="font-semibold"> February 14</span> -what a better way to celebrate 🎉🥳 Valentines' Day 😍 <br><br> If you'd like us to send you a reminder
+                        when we are ready, tell us below...</p>
                 </div>
                 <!-- typeform-widget -->
                 <div class="typeform-widget" data-url="https://form.typeform.com/to/CFDvdFhZ?typeform-medium=embed-snippet" style="width: 100%; height: 350px;"></div>
