--- a/request.html
+++ b/request.html
@@ -151,9 +151,10 @@
                     <h3 class="mb-6 text-lg font-bold leading-none text-gray-500">
                         Get lifetime access
                     </h3>
-                    <p class="text-5xl font-bold text-center text-gray-700">AED 349</p>
-                    <p class="mt-6 mb-4 text-lg leading-relaxed">We are in an acceptance early stage before we open it for member’s to join on <span class="font-semibold"> February 14</span> -what a better way to celebrate 🎉🥳 Valentines' Day 😍 <br><br> If you'd like us to send you a reminder
-                        when we are ready, tell us below...</p>
+                    <p class="text-5xl font-bold text-center text-gray-700">AED 449</p>
+                    <p class="mt-6 mb-4 text-lg leading-relaxed">
+                        We're excited you'd like to apply to join the UAE's leading private startups community. We are in an early acceptance stage before we open it for selcted member to join on <span class="font-semibold"> February 14</span> -what a
+                        better way to celebrate 🎉🥳 Valentines' Day 😍 <br><br> If you'd like us to send you a reminder when we are ready, tell us below...</p>
                 </div>
                 <!-- typeform-widget -->
                 <div class="typeform-widget" data-url="https://form.typeform.com/to/CFDvdFhZ?typeform-medium=embed-snippet" style="width: 100%; height: 350px;"></div>
