--- a/request.html
+++ b/request.html
@@ -154,7 +154,7 @@
                     <p class="text-5xl font-bold text-center text-gray-700">AED 399</p>
                     <p class="mt-6 mb-4 text-lg leading-relaxed">
                         We're excited you'd like to apply to join the UAE's leading private startups community. We are in an early acceptance stage before we open it for selcted member to join on <span class="font-semibold"> February 14</span> -what a
-                        better way to celebrate 🎉🥳 Valentines' Day 😍 <br><br> If you'd like us to send you a reminder when we are ready, tell us below...</p>
+                        better way to celebrate 🎉🥳 Valentines' Day 😍 <br><br> If you'd like us to send you a reminder when we are ready, join the waiting list...</p>
                 </div>
                 <!-- typeform-widget -->
                 <div class="typeform-widget" data-url="https://form.typeform.com/to/CFDvdFhZ?typeform-medium=embed-snippet" style="width: 100%; height: 350px;"></div>
