--- a/request.html
+++ b/request.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-        Welcome to UAE HUB - A private community for UAE Startups, Investors and Talents.
+        Request Invitation - A private community for UAE Startups, Investors and Talents.
     </title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
