--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <title>
         Welcome to UAE HUB - A private community for UAE Startups, Investors and Talents.
     </title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
-    <!--Replace with your tailwind.css once created-->
+    <meta name="description" content="A platformfor startups and SaaS community in MENA" />
+    <meta name="keywords" content="uae, saas, startups, egypt, saudia arabia, bahrain, kuwait, turkey, vcs" />
+    <meta name="author" content="Ahmed Nadar" />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
     <style>
